@@ -2,7 +2,7 @@ useDynLib(sme)
 import(stats)
 
 export(AICc, BICn, sme, sme.default, sme.list, sme.data.frame, plot.sme, plotSmeModel,
-plotSmeRaw, plotSmeDiagnostic)
+plotSmeRaw, plotSmeDiagnostic, getRoughnessMatrix)
 
 # Used internally
 # export(blockDiagMat, incidenceMatrix, roughnessMatrix, vcov.sme, logLik.sme)
